--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <div class="glass-card" id="modal-body" style="max-width:750px; text-align:left; border-color:var(--accent);"></div>
 </div>
 
-<script src="assets/js/script.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
+
 </html>
